--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -25,7 +25,7 @@
 }
 
 .NavBar li:hover {
-  border-bottom: 5px solid #FF4D0B;
+  border-bottom: 3px solid #FF4D0B;
 }
 
 .NavBar .MobileNavigation {
@@ -37,10 +37,15 @@
     display: none;
   }
 
+  .NavBar {
+    height: 60px;
+  }
+
   .NavBar .MobileNavigation {
     display: flex;
     align-items: center;
     height: 56px;
+    
   }
 
   .NavBar .MobileNavigation .burguer {
@@ -56,8 +61,10 @@
     top: 80px;
     right: 0;
     width: 100%;
+    padding: 0;
     background-color: #181818;
     border-top: 2px solid white;
+    justify-content: center;
   } 
 
 }
