--- a/client/src/components/ServiceCard/ServiceCard.module.css
+++ b/client/src/components/ServiceCard/ServiceCard.module.css
@@ -9,7 +9,7 @@
   padding: 20px;
   padding-top: 50px;
   margin: 0 30px;
-  border: 1px solid #2b2b2b;
+  border: 1px solid #c0c0c0;
   background-color: #f6f6f6;
 }
 
