--- a/client/src/components/ServicesSection/ServicesSection.module.css
+++ b/client/src/components/ServicesSection/ServicesSection.module.css
@@ -20,3 +20,14 @@
   margin-top: 50px;
   width: 80vw;
 }
+
+@media (max-width: 990px){
+
+  .cardsContainer{
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    padding: 40px
+  }
+
+}
