--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -30,12 +30,12 @@
   position: relative;
   padding: 0;
   margin: 8px;
-  color: #f6f6f6;
+  color: #2b2b2b;
 }
 
 .alcance {
   font-size: 50px;
-  border-bottom: 1px solid #f6f6f6;
+  border-bottom: 1px solid #2b2b2b;
 }
 
 .h3{
