--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -2,35 +2,101 @@
 .OurfloatContainer{
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
-  height: 70vh;
-  margin: 150px auto;
-  background: url(../../static/assets/polygon-orange-background.svg);
+  height: 80vh;
+  margin: 0 auto;
+  padding: 30px;
+  background: url(../../static/assets/wave-background.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  filter: brightness(90%)
+  filter: brightness(90%);
 }
 
 .vehiclesImage{
   width: 50%;
   height: 100%;
+  margin: 0 60px;
+  margin-left: 0;
 }
 
 .infoContainer{
   position: relative;
   width: 50%;
+  padding: 90px;
+  padding-left: 150px;
 }
 
 .title {
-  font-size: 50px;
-  color: #f4f4f4;
+  font-size: 65px;
+  color: #676767;
+  font-weight: 800;
+  margin: 0;
 }
 
 .description{
-  margin: 100px 0;
+  margin: 55px 0;
+  padding: 0 40px;
   font-family: inherit;
   font-size: 30px;
+  color: #676767;
+}
+
+.guarantee{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 16em;
+  background-color: #DA2E25;
+  margin: 0;
+  padding: 30px;
+}
+
+.guaranteeTitle {
+   font-size: 35px;
+  color: #f4f4f4;
+  font-weight: 800;
+  margin: 0;
+}
+
+.percentage{
+  font-size: 70px;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 990px){
+
+  .OurfloatContainer{
+    padding: 0;
+    margin: 0;
+     justify-content: center;
+     align-items: center;
+     width: auto;
+     height: 70vh;
+  }
+
+  .vehiclesImage{
+    display: none;
+  }
+
+  .infoContainer{
+    width: 100vw;
+    padding: 1rem
+  }
+
+  .title {
+    font-size: 40px;
+    font-weight: 600px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .description{
+    font-size: 20px;
+    margin: 20px 0;
+    padding: 0;
+  }
 }
