--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -17,7 +17,7 @@
 
 .vehiclesImage{
   width: 50%;
-  height: 100%;
+  height: auto;
   margin: 0 60px;
   margin-left: 0;
 }
@@ -27,11 +27,11 @@
   width: 50%;
   padding: 90px;
   padding-left: 150px;
+  color: #676767;
 }
 
 .title {
   font-size: 65px;
-  color: #676767;
   font-weight: 800;
   margin: 0;
 }
@@ -41,7 +41,6 @@
   padding: 0 40px;
   font-family: inherit;
   font-size: 30px;
-  color: #676767;
 }
 
 .guarantee{
@@ -72,19 +71,17 @@
   .OurfloatContainer{
     padding: 0;
     margin: 0;
+    flex-direction: column;
      justify-content: center;
      align-items: center;
      width: auto;
      height: 70vh;
   }
 
-  .vehiclesImage{
-    display: none;
-  }
-
   .infoContainer{
     width: 100vw;
-    padding: 1rem
+    padding: 1rem;
+    color: #2b2b2b
   }
 
   .title {
@@ -98,5 +95,14 @@
     font-size: 20px;
     margin: 20px 0;
     padding: 0;
+  }
+
+  .guaranteeTitle{
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .percentage {
+    font-size: 35px;
   }
 }
