--- a/client/src/components/Contact/contact.module.css
+++ b/client/src/components/Contact/contact.module.css
@@ -1,34 +1,30 @@
 .slider {
-  width: 75vw;
+  width: 100vw;
   height: auto;
   margin: auto;
   overflow: hidden;
   background-color: red;
 }
-.slider .slide_track {
+.slide_track {
   background-color: yellow;
   display: flex;
-  animation: scroll 40s linear infinite;
-  -webkit-animation: scroll 40s linear infinite;
-  width: calc(200px * 6);
+  animation: scroll 120s linear infinite;
+  width: calc(515px * 6);
 }
-.slider .slide {
+.slide {
+  background-color: green;
   width: 200px;
+  margin-right: 315px;
 }
-.slider .slide div{
-    width: 100%;
-  }
 .slide a {
   margin-left: 20px;
 }
 
-@keyframes scroll{
-    0% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-    100% {
-      -webkit-transform: translateX(calc(-200px * 3));
-      transform: translateX(calc(200px * 3));
-    }
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
   }
+  100% {
+    transform: translateX(calc(-515px * 3));
+  }
+}
