--- a/client/src/components/Cv/Cv.module.css
+++ b/client/src/components/Cv/Cv.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+
 }
 .content {
   width: 450px;
@@ -17,17 +18,14 @@
   border-radius: 10px;
   background-color: #fff;
   text-align: center;
+  box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
 }
 .open {
-  padding: 15px 15px;
-  margin-top: 30px;
-  margin-left: 30px;
   background-color: rgb(17, 195, 62);
-  border-radius: 5px;
-  border: none;
-  font-size: 16px;
-  color: #fff;
-  cursor: pointer;
+  width: 100%;
+  height: 25px;
+  line-height: 15px;
+  border-radius: 10px;
 }
 .close {
   width: 100%;
