--- a/client/src/components/Hero/Hero.module.css
+++ b/client/src/components/Hero/Hero.module.css
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../../static/assets/ParcelPlusHero.jpg);
+  background: url(../../static/assets/Hero-orange.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
