--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -9,6 +9,7 @@
   margin: 0 auto;
   padding: 30px;
   background: url(../../static/assets/wave-background.svg);
+  background-color: #FFFDFA;;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
