--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: auto;
-  margin: 3em;
+  background-color: #FFFDFA;
   box-sizing: border-box;
 }
 
