--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -10,23 +10,24 @@
   padding: 60px;
   height: 16em;
   overflow: hidden;
+  white-space: nowrap;
+  clip: rect(0, auto, auto, 0);
+  box-sizing: border-box;
 }
 
 .routeContainer::before {
   content: "";
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: url(../../static/assets/ruta.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
+  background-size : 99.9%;
   background-position: center center;
   background-color: white;
-  will-change: transform;
   filter: brightness(80%);
-  z-index: -9;
 }
 
 .alcance, .h3 {
