--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -24,6 +24,7 @@
   height: 100%;
   background: url(../../static/assets/ruta.jpg);
   background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size : 99.9%;
   background-position: center center;
   background-color: white;
