--- a/client/src/components/Form info/FormInfo.module.css
+++ b/client/src/components/Form info/FormInfo.module.css
@@ -1,5 +1,4 @@
-
-.infoContainer{
+.infoContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +27,41 @@
   background-color: #f6f6f6;
   height: 150px;
   width: 40%;
-  margin: 0.5em
+  margin: 0.5em;
 }
 
 .subtitle {
   margin: 0;
   padding: 0;
   font-size: 18px;
+}
+
+@media (max-width: 990px) {
+
+  .infoContainer {
+    width: auto;
+    justify-content: space-evenly;
+  } 
+
+  .title, .contact, .h3 {
+    margin: 20px 0;
+  }
+
+  .formCardsContainer{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    width: 82vw;
+    margin: 50px 0
+  }
+
+  .formCard {
+    height: 90px;
+    width: 25%;
+    margin: 0.2em;
+  }
+
+  .subtitle {
+    font-size: 15px;
+  }
 }
