--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -13,7 +13,7 @@
   align-items: flex-start;
   justify-content: space-evenly;
   height: 100%;
-  min-width: 320px;
+  min-width: 20em;
 }
 
 .form {
@@ -34,33 +34,33 @@
 }
 
 .labels {
-  margin-top: 13px;
+  margin-top: 0.81em;
 }
 
 .inputField {
   width: 100%;
-  height: 32px;
+  height: 2.5em;
   border-radius: 5px;
   margin: 0.5em 0;
-  padding: 6px 12px;
+  padding: 0.37em 0.75em;
   background-color: #f6f6f6;
   border: 1px solid #c0c0c0;
   font-family: inherit;
 }
 .cellphoneInput {
-  width: 230px;
+  width: 14.37em;
   font-family: inherit;
 }
 
 .packageSize {
-  width: 115px;
+  width: 7.18em;
   font-family: inherit;
 }
 
 .error {
   font-size: 11px;
   color: #fd3535;
-  margin: 4px 0;
+  margin: 0.36em 0;
   padding: 0;
   font-family: inherit;
 }
@@ -70,7 +70,7 @@
   border-radius: 5px;
   width: 100%;
   margin: 0.5em 0;
-  padding: 6px 12px;
+  padding: 0.37em 0.75em;
   outline: none;
   resize: none;
   background-color: #f6f6f6;
@@ -98,4 +98,47 @@
   color: #ff4d0b;
   border-color: #ff8255;
   background-color: #f4f4f4;
+}
+
+@media (max-width: 990px){
+.formContainer {
+  font-size: 12px;
+  flex-direction: column;
+}
+
+.form {
+  margin-top: 50px;
+  display:inline-block;
+  height: auto;
+}
+
+.userInfo {
+  margin-top: 25px;
+  border: none
+}
+
+.labels {
+  margin-top: 0.55em;
+}
+
+.inputField {
+  width: 50%;
+}
+
+.error {
+  font-size: 10px;
+}
+
+.description {
+  width: 50%;
+}
+
+.cellphoneInput {
+  margin-bottom: 20px;
+}
+
+.submitButton {
+  font-size: 11px;
+}
+
 }
