--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -25,7 +25,7 @@
   background: url(../../static/assets/ruta.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size : 99.9%;
+  background-size : cover;
   background-position: center center;
   background-color: white;
   filter: brightness(80%);
