--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -6,6 +6,7 @@
   background-color: #181818;
   width: 100%;
   position: fixed;
+  padding: 20px;
   z-index: 999;
   opacity: 0.9;
   display: flex;
