updated contact styles

--- a/client/src/components/Contact/contact.module.css
+++ b/client/src/components/Contact/contact.module.css
@@ -3,11 +3,14 @@
   height: auto;
   margin: auto;
   overflow: hidden;
+  color:#f6f6f6;
+  background-color: #2b2b2b;
 }
 .slide_track {
   display: flex;
   animation: scroll 120s linear infinite;
   width: calc(515px * 6);
+  background-color: #2b2b2b;
 }
 .slide {
   width: 550px;
@@ -17,6 +20,12 @@
 }
 .number {
   margin-right: 5px;
+
+}
+
+.slide, .slide > a, .number {
+ text-decoration: none;
+ color: #FF4D0B
 }
 
 @keyframes scroll {
