--- a/client/src/components/JoinUs/JoinUs.module.css
+++ b/client/src/components/JoinUs/JoinUs.module.css
@@ -26,9 +26,8 @@
   width: 100%;
   height: 100%;
   background: url(../../static/assets/workWhitUs.jpg);
-  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size : 99.99%;
+  background-size : cover;
   background-position: center center;
   filter: brightness(65%);
 }
