--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -23,9 +23,8 @@
   width: 100%;
   height: 100%;
   background: url(../../static/assets/ruta.jpg);
-  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size : 99.99%;
+  background-size : cover;
   background-position: center center;
   background-color: white;
   filter: brightness(80%);
