--- a/client/src/components/Hero/Hero.module.css
+++ b/client/src/components/Hero/Hero.module.css
@@ -17,7 +17,7 @@
   height: 100%;
   background: url(../../static/assets/Hero-orange.png);
   background-repeat: no-repeat;
-  background-size: 99.99%;
+  background-size: cover;
   background-position: center center;
   filter: brightness(70%)
 }
