--- a/client/src/components/JoinUs/JoinUs.module.css
+++ b/client/src/components/JoinUs/JoinUs.module.css
@@ -25,8 +25,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../../static/assets/workWhitUs.jpg);
-  background-repeat: no-repeat;
+  background: url(../../static/assets/workWhitUs.jpg) no-repeat fixed 100%;
   background-size : cover;
   background-position: center center;
   filter: brightness(65%);
