--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -1,11 +1,13 @@
 
 .aboutSection{
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  padding-top: 150px;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   background-color: #f6f6f6;
 }
 
@@ -15,6 +17,7 @@
 
 .aboutSubtitle {
   font-size: 20px;
+  margin-bottom: 50px;
 }
 
 
@@ -33,7 +36,7 @@
   justify-content: flex-start;
   align-items: center;
   padding: 1.42em;
-  height: 100%;
+  height: 490px;
   width: 30%;
   max-width: 27.14em;
   color: #f6f6f6 ;
@@ -64,7 +67,8 @@
 
 .description {
   display: inline-block;
-  width: 60%
+  width: 70%;
+  flex-wrap: nowrap;
 }
 
 .description, .valuesList, .valueItem {
@@ -78,6 +82,24 @@
 
 .valueItem {
   text-align: center;
+  margin: 8px 0
+}
+
+.left {
+  text-align: left;
+  margin-right: auto;
+  margin-left: 10%;
+}
+
+
+.workTitle {
+  margin-top: 50px;
+  font-size: 30px;
+}
+
+.workSubtitle {
+  margin-top: 35px;
+  font-size: 20px;
 }
 
 @media (max-width: 990px) {
@@ -95,11 +117,11 @@
   }
   
   .aboutCard{
-    font-size: 14px;
-    height: 35.07em;
+    font-size: 15px;
+    min-height: 35.07em;
     max-width: 30em;
     margin: 2em;
-    min-width: 19.23em;
+    min-width: 24.23em;
     justify-content: space-around;
   }
 
