--- a/client/src/components/Cv/Cv.module.css
+++ b/client/src/components/Cv/Cv.module.css
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100vw;
   min-height: 100vh;
@@ -12,14 +12,16 @@
 
 }
 .content {
+  display: flex;
+  flex-direction: column;
   width: 450px;
   height: auto;
   padding: 10px;
   border-radius: 10px;
   background-color: #fff;
-  text-align: center;
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
 }
+
 .open {
   background-color: rgb(17, 195, 62);
   width: 100%;
