--- a/client/src/components/Cv/Cv.module.css
+++ b/client/src/components/Cv/Cv.module.css
@@ -9,30 +9,94 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-
 }
 .content {
   display: flex;
   flex-direction: column;
-  width: 450px;
+  width: 40vw;
+  min-width: 740px;
   height: auto;
   padding: 10px;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+  overflow-y: hidden;
 }
 
-.open {
-  background-color: rgb(17, 195, 62);
-  width: 100%;
-  height: 25px;
-  line-height: 15px;
-  border-radius: 10px;
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: auto;
 }
-.close {
+
+.formContainer{
+  display: flex;
+}
+
+.userData, .vehicleData {
+  margin: 0 20px 20px 20px;
+  padding: 0 20px;
+  text-align: left;
+  width: 50%;
+}
+
+.dataTitle {
+ margin: 20px auto 30px auto;
+ border-bottom: 1px solid #2b2b2b;
+ text-align: center;
+}
+
+.labels {
+  margin-top: 0.81em;
+}
+
+.inputField {
   width: 100%;
-  height: 25px;
-  line-height: 15px;
-  border-radius: 10px;
-  background-color: red;
+  height: 2.5em;
+  border-radius: 5px;
+  margin: 0.5em 0;
+  padding: 0.37em 0.75em;
+  background-color: #f6f6f6;
+  border: 1px solid #c0c0c0;
+  font-family: inherit;
+}
+.error {
+  font-size: 11px;
+  color: #fd3535;
+  margin: 0.36em 0;
+  padding: 0;
+  font-family: inherit;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.submitButton, .close {
+  display: block;
+  border: 1px solid #ff8255;
+  font-size: 1.125rem;
+  font-family: inherit;
+  font-weight: 200;
+  width: 150px;
+  height: 30px;
+  cursor: pointer;
+  color: #f4f4f4;
+  border-radius: 4px;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #ff4d0b;
+  margin: 0 auto;
+  margin-bottom: 8px;
+  align-self: center;
+}
+
+.close {
+  color: #ff4d0b;
+  background-color: #f4f4f4;
+  border-color: #ff8255;
 }
