--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,7 +1,7 @@
 .formContainer {
   display: flex;
-  justify-content: center;
-  width: 80vw;
+  justify-content: space-evenly;
+  width: auto;
   background-color: #FFFDFA;
   margin: 9em auto;
   box-sizing: border-box;
@@ -13,7 +13,7 @@
   align-items: flex-start;
   justify-content: space-evenly;
   height: 100%;
-  min-width: 20em;
+  min-width: 15em;
 }
 
 .form {
@@ -31,6 +31,10 @@
   border-left: 1px solid #c0c0c0;
   padding: 0 2em;
   justify-content: flex-start;
+}
+
+.formTitle {
+  margin-bottom: auto;
 }
 
 .labels {
@@ -70,6 +74,7 @@
   border-radius: 5px;
   width: 100%;
   margin: 0.5em 0;
+  margin-top: auto;
   padding: 0.37em 0.75em;
   outline: none;
   resize: none;
@@ -79,14 +84,13 @@
 
 .submitButton {
   border: 1px solid #ff8255;
-  padding: 0.9375rem 1.875rem;
+  padding: 0.9375rem 0.67499rem;
   font-size: 1.125rem;
   font-family: inherit;
   font-weight: 200;
   cursor: pointer;
   color: #f4f4f4;
   border-radius: 4px;
-  display: inline-flex;
   align-items: center;
   white-space: nowrap;
   background-color: #ff4d0b;
