--- a/client/src/components/ServiceCard/ServiceCard.module.css
+++ b/client/src/components/ServiceCard/ServiceCard.module.css
@@ -2,29 +2,43 @@
 .card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  width: 600px;
-  height: 300px;
+  width: 30%;
+  min-height: 200px;
   padding: 20px;
-  margin: 0 30px;
+  margin: 0 15px;
   border: 1px solid #c0c0c0;
   background-color: #f6f6f6;
   border-radius: 3px;
   box-sizing: border-box;
 }
 
+.icon {
+  margin-bottom: 40px;
+}
+
 .title{
   font-size: 16px;
   font-family: inherit;
-  height: 50%
+}
+
+@media (max-width: 1250px) {
+  .card {
+    width: 20%;
+    margin-top: 30px
+  }
+
+  
 }
 
 @media (max-width: 990px){
-  .card {
-    width: 200px;
-    height: 250px;
-    margin-top: 30px
 
+  .icon {
+    margin-bottom: 20px;
+  }
+  .card {
+    width: 25%;
+    height: 200px;
+    margin-top: 30px
   }
 }
