--- a/client/src/components/Form info/FormInfo.module.css
+++ b/client/src/components/Form info/FormInfo.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   justify-content: space-between;
   width: 700px;
-  padding: 20px;
+  padding: 30px;
+  padding-top: 0;
   height: auto;
   border-radius: 5px;
 }
@@ -18,7 +19,7 @@
   width: 100%;
   min-width: 370px;
   border-radius: 50px 3px 50px 3px;
-  margin: 40px
+  margin: 15px
 }
 
 
@@ -49,6 +50,15 @@
   padding: 0;
   font-size: 18px;
 }
+
+@media (max-width: 1250px) {
+
+  .sign {
+    margin: 15px;
+    max-width: 531px;
+  }
+}
+
 
 @media (max-width: 990px) {
 
