--- a/client/src/components/JoinUs/JoinUs.module.css
+++ b/client/src/components/JoinUs/JoinUs.module.css
@@ -46,26 +46,18 @@
   font-size: 25px;
 }
 
-.joinButton{
-  z-index: 999;
-  margin: 1rem;
-  border: 1px solid #ff8255;
-  padding: 0.550rem 1.875rem;
-  font-size: 1.520rem;
-  font-family: inherit;
-  font-weight: 200;
-  cursor: pointer;
-  color: #f4f4f4;
-  border-radius: 4px;
-  display: inline-flex;
-  align-items: center;
-  white-space: nowrap;
-  background-color: transparent
-}
+@media(max-width:900px){
+  .joinTitle {
+    font-size: 30px;
+  }
 
-.joinButton:hover {
-  color: #FF4D0B;
-  border-color: #ff8255;
-  background-color: #f4f4f4;
+  .joinSubtitle{
+  font-size: 15px;
+  }
+
+  .joinUsContainer {
+    padding: 30px;
+  }
+
 }
 
