--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding-top: 150px;
+  padding-top: 110px;
   width: 100vw;
   height: auto;
   background-color: #f6f6f6;
@@ -118,7 +118,7 @@
   
   .aboutCard{
     font-size: 15px;
-    min-height: 35.07em;
+    height: 28.66em;
     max-width: 30em;
     margin: 2em;
     min-width: 24.23em;
@@ -126,12 +126,12 @@
   }
 
   .aboutTitle {
-    font-size: 50px;
+    font-size: 40px;
     margin-top: 40px;
   }
 
   .aboutSubtitle {
-    margin-top: 35px;
+    margin-top: 30px;
   font-size: 15px;
   }
 
@@ -140,7 +140,11 @@
   }
 
   .cardTitle {
-    font-size: 25px;
+    font-size: 30px;
+  }
+
+  .workSubtitle {
+    font-size: 15px ;
   }
 
 }
