--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -44,3 +44,18 @@
 .h3{
   font-size: 25px;
 }
+
+@media(max-width:900px){
+  .alcance {
+    font-size: 30px;
+  }
+
+  .h3{
+  font-size: 15px;
+  }
+
+  .routeContainer { 
+    padding: 30px;
+  }
+
+}
