--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  filter: brightness(90%);
+  /* filter: brightness(90%); */
 }
 
 .vehiclesImage{
@@ -28,7 +28,7 @@
   width: 50%;
   padding: 90px;
   padding-left: 150px;
-  color: #676767;
+  color: #2b2b2b;
 }
 
 .title {
