--- a/client/src/components/Modal/Modal.module.css
+++ b/client/src/components/Modal/Modal.module.css
@@ -27,13 +27,13 @@
   border-color: #ff8255;
   background-color: #f4f4f4;
 }
+.open{
+ z-index: 999999 
+}
 
 @media (max-width: 990px) {
   .joinButton { 
   font-size: 15px;
   }
 
-  .modal{
-   z-index: 999999 
-  }
   }
