--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -13,11 +13,12 @@
 
 .aboutTitle {
   font-size: 70px;
+  margin: 100px 0;
 }
 
 .aboutSubtitle {
   font-size: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 
 
@@ -93,13 +94,15 @@
 
 
 .workTitle {
-  margin-top: 50px;
+  margin-top: 100px;
   font-size: 30px;
+  background-color: #f6f6f6;
 }
 
 .workSubtitle {
-  margin-top: 35px;
+  margin-top: 50px;
   font-size: 20px;
+  background-color: #f6f6f6;
 }
 
 @media (max-width: 990px) {
