--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -29,7 +29,7 @@
   filter: brightness(80%);
 }
 
-.alcance, .h3 {
+.alcance, .p {
   position: relative;
   padding: 0;
   margin: 8px;
@@ -41,7 +41,7 @@
   border-bottom: 1px solid #2b2b2b;
 }
 
-.h3{
+.p{
   font-size: 25px;
 }
 
@@ -50,7 +50,7 @@
     font-size: 30px;
   }
 
-  .h3{
+  .p{
   font-size: 17px;
   }
 
@@ -58,4 +58,18 @@
     padding: 30px;
   }
 
+}
+
+@media(max-width:450px){
+
+  .routeContainer {
+    padding: 15px
+  }
+
+  .p{
+  font-size: 15px;
+  font-weight: bold;
+  word-break: break-all;
+    white-space: normal;
+  }
 }
