--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -61,6 +61,11 @@
   margin-bottom: 60px;
 }
 
+ .icon {
+  height: 100px;
+  width: 100px;
+ }
+
 .cardTitle {
   font-size: 35px;
   color: #ff4d0b
@@ -135,7 +140,7 @@
 
   .aboutSubtitle {
     margin-top: 30px;
-  font-size: 15px;
+    font-size: 15px;
   }
 
   .headline {
@@ -148,6 +153,61 @@
 
   .workSubtitle {
     font-size: 15px ;
+  }
+
+}
+
+@media (max-width: 450px) {
+
+  .aboutTitle { 
+    font-size: 25px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+  }
+
+  .aboutSubtitle {
+    margin-top: 25px;
+    margin-bottom: 15px;
+    padding: 15px;
+  }
+
+  .aboutCard{
+    min-width: unset;
+    width: 100%;
+    max-width: 350px;
+    height: 100%;
+    padding: 12px;
+  }
+
+  .headline {
+    margin: 10px;
+    justify-content: space-between;
+  }
+
+  .cardTitle {
+    font-size: 30px;
+  }
+
+  .icon {
+    max-height: 75px;
+    height: auto;
+    min-height: 40px;
+    max-width: 75px;
+    width: auto;
+    min-width: 40px;
+  }
+
+  .workTitle {
+    text-align: center;
+    margin: 0 auto
+  }
+
+  .workSubtitle {
+    font-size: 15px;
+    word-break: break-all;
+    white-space: normal;
+    padding: 15px;
+    margin: 50px 15px
   }
 
 }
