--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -204,7 +204,7 @@
 
   .workSubtitle {
     font-size: 15px;
-    word-break: break-all;
+    word-break: break-word;
     white-space: normal;
     padding: 15px;
     margin: 50px 15px
