--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -69,7 +69,7 @@
   .p{
   font-size: 15px;
   font-weight: bold;
-  word-break: break-all;
+  word-break: break-word;
     white-space: normal;
   }
 }
