--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -25,10 +25,11 @@
 }
 
 .infoContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   width: 50%;
-  padding: 90px;
-  padding-left: 150px;
   color: #2b2b2b;
 }
 
