--- a/client/src/components/Vehicles/Vehicles.module.css
+++ b/client/src/components/Vehicles/Vehicles.module.css
@@ -18,7 +18,7 @@
 
 .vehiclesImage{
   width: 50%;
-  min-width: 300px;
+  min-width: 400px;
   height: auto;
   margin: 0 60px;
   margin-left: 0;
@@ -87,6 +87,10 @@
     color: #2b2b2b
   }
 
+  .vehiclesImage{
+    margin: 0 30px
+  }
+
   .title {
     font-size: 40px;
     font-weight: 600px;
@@ -110,7 +114,7 @@
   }
 }
 
-@media (max-width: 990px){
+@media (max-width: 450px){
 
   .title {
     font-size: 32px;
@@ -122,5 +126,6 @@
 
   .vehiclesImage {
     margin: 0 15px;
+    min-width: 250px;
   }
 }
