--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -4,7 +4,7 @@
 .NavBar{
   height: 80px;
   background-color: #181818;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   padding: 20px;
   z-index: 99999;
@@ -39,6 +39,8 @@
   }
 
   .NavBar {
+    position: fixed;
+    width: 100vw;
     height: 60px;
   }
 
