--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -61,12 +61,12 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 80px;
+    top: 60px;
     right: 0;
     width: 100%;
     padding: 0;
     background-color: #181818;
-    border-top: 2px solid white;
+    border-top: 2px solid #FF4D0B;
     justify-content: center;
   } 
 
