--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -56,7 +56,8 @@
   }
 
   .routeContainer { 
-    padding: 30px;
+  padding: 30px;
+  overflow-x: hidden;
   }
 
 }
@@ -64,7 +65,8 @@
 @media(max-width:450px){
 
   .routeContainer {
-    padding: 15px
+    padding: 15px;
+    overflow-x: hidden;
   }
 
   .p{
