--- a/client/src/components/AboutUs/AboutUs.module.css
+++ b/client/src/components/AboutUs/AboutUs.module.css
@@ -124,6 +124,7 @@
     align-items: center;
     justify-content: space-between;
     height: auto;
+    overflow-x: hidden;
   }
   
   .aboutCard{
