--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -9,7 +9,7 @@
   margin: 0 auto;
   padding: 60px;
   height: 16em;
-  overflow: hidden;
+  overflow-x: hidden;
   white-space: nowrap;
   clip: rect(0, auto, auto, 0);
   box-sizing: border-box;
