--- a/client/src/components/ServicesSection/ServicesSection.module.css
+++ b/client/src/components/ServicesSection/ServicesSection.module.css
@@ -14,6 +14,7 @@
   height: auto;
   margin: 0 auto;
   padding: 50px;
+  overflow-x: hidden;
 }
 
 .ourServices {
@@ -35,6 +36,7 @@
 @media (max-width: 1250px) {
   .cardsContainer {
     flex-wrap: wrap;
+    overflow-x: hidden;
   }
   
   .titleContainer{
@@ -51,7 +53,8 @@
     flex-wrap: wrap;
     width: 100vw;
     align-items: center;
-    padding: 40px
+    padding: 40px;
+    overflow-x: hidden;
   }
 
   .container {
@@ -71,6 +74,7 @@
 
   .cardsContainer{
     padding: 20px 0;
+    overflow-x: hidden;
   }
 
   .container {
