--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,12 @@ html{
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 html, body {
-  overflow-x: hidden;
-  max-width: 100%;
+  overflow-x: hidden !important;
+  max-width: 100vw;
 }
 
 body {
@@ -25,7 +26,7 @@ code {
     monospace;
 }
 
-@media (max-width< 1250px){
+/* @media (max-width< 1250px){
   html, body {
   overflow-x: hidden;
 }
@@ -42,4 +43,4 @@ code {
   html, body {
     overflow-x: hidden;
   }
-}
+} */
