--- a/client/src/components/Route/Route.module.css
+++ b/client/src/components/Route/Route.module.css
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../../static/assets/ruta.jpg) no-repeat fixed 100%;
+  background: url(../../static/assets/ruta_resized.jpg) no-repeat fixed 100%;
   background-size : cover;
   background-position: center center;
   background-color: white;
